# ZorkVDO

./: .gitignore  Dockerfile  railway.json  vercel.json  worklog.md
scripts/: ssh-wrapper.py
src/app/: layout.tsx  page.tsx
src/app/api/v1/[...path]/: route.ts
src/components/app/: app-wizard.tsx
src/components/site/: blueprint-visualizer.tsx  cta-section.tsx  dashboard-preview.tsx  developer-settings.tsx  features.tsx  hero.tsx  how-it-works.tsx  pricing.tsx  site-footer.tsx  site-nav.tsx  templates.tsx
src/lib/: api.ts  sample-data.ts
upload/: google-services.json
zorkvdo/: .gitignore  CREDENTIALS.md  DEPLOY.md  railway.json
zorkvdo/apps/flutter/: README.md  analysis_options.yaml  pubspec.yaml
zorkvdo/apps/flutter/android/: build.gradle.kts
zorkvdo/apps/flutter/android/app/: build.gradle.kts
zorkvdo/apps/flutter/android/app/src/main/: AndroidManifest.xml
zorkvdo/apps/flutter/android/app/src/main/java/com/zorkvdo/app/: MainActivity.kt  ZorkVDOApplication.kt
zorkvdo/apps/flutter/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
zorkvdo/apps/flutter/android/app/src/main/res/values/: styles.xml
zorkvdo/apps/flutter/lib/: firebase_options.dart  main.dart
zorkvdo/apps/flutter/lib/core/: router.dart
zorkvdo/apps/flutter/lib/core/config/: app_config.dart
zorkvdo/apps/flutter/lib/core/theme/: app_theme.dart
zorkvdo/apps/flutter/lib/data/api/: api_client.dart
zorkvdo/apps/flutter/lib/data/models/: models.dart  models.freezed.dart  models.g.dart
zorkvdo/apps/flutter/lib/data/providers/: providers.dart
zorkvdo/apps/flutter/lib/data/services/: services.dart
zorkvdo/apps/flutter/lib/features/analyzing/: analyzing_screen.dart
zorkvdo/apps/flutter/lib/features/auth/: auth_screen.dart
zorkvdo/apps/flutter/lib/features/blueprint/: blueprint_screen.dart
zorkvdo/apps/flutter/lib/features/clips/: clips_screen.dart
zorkvdo/apps/flutter/lib/features/home/: home_screen.dart
zorkvdo/apps/flutter/lib/features/profile/: profile_screen.dart
zorkvdo/apps/flutter/lib/features/rendering/: rendering_screen.dart
zorkvdo/apps/flutter/lib/features/result/: result_screen.dart
zorkvdo/apps/flutter/lib/features/settings/: settings_screen.dart
zorkvdo/config/analytics_config/: PLACEHOLDER.md
zorkvdo/config/database_config/: PLACEHOLDER.md
zorkvdo/config/firebase_config/: PLACEHOLDER.md
zorkvdo/config/gemini_config/: PLACEHOLDER.md  model_config.json
zorkvdo/config/notification_config/: PLACEHOLDER.md
zorkvdo/config/security_config/: PLACEHOLDER.md
zorkvdo/config/storage_config/: PLACEHOLDER.md
zorkvdo/config/video_engine_config/: PLACEHOLDER.md
zorkvdo/infra/docker/: Dockerfile.backend  docker-compose.yml
zorkvdo/services/backend/: .coverage  .env.example  README.md  pyproject.toml
zorkvdo/services/backend/app/: __init__.py  _paths.py  main.py
zorkvdo/services/backend/app/api/: deps.py
zorkvdo/services/backend/app/api/v1/: __init__.py  auth.py  blueprints.py  feedback.py  health.py  jobs.py  projects.py  status.py  templates.py  users.py  videos.py
zorkvdo/services/backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
zorkvdo/services/backend/app/db/: __init__.py  base.py  factory.py  firestore.py  memory.py
zorkvdo/services/backend/app/integrations/: __init__.py  registry.py
zorkvdo/services/backend/app/models/: __init__.py  auth.py  jobs.py  projects.py  user.py
zorkvdo/services/backend/app/services/: __init__.py  analysis_service.py  auth_service.py  blueprint_service.py  moviepy_service.py  project_service.py  template_service.py  user_service.py  video_service.py
zorkvdo/services/backend/app/storage/: __init__.py  base.py  factory.py  firebase.py  local.py  paths.py  s3.py
zorkvdo/services/backend/app/workers/: __init__.py  celery_app.py  renderer.py  tasks.py
zorkvdo/services/backend/tests/: conftest.py
zorkvdo/services/backend/tests/factories/: __init__.py
zorkvdo/services/backend/tests/integration/: test_auth_api.py  test_health.py  test_jobs_api.py  test_projects_api.py  test_templates_api.py  test_users_api.py  test_videos_api.py
zorkvdo/services/backend/tests/unit/: test_ai_factory.py  test_ai_provider.py  test_auth_service.py  test_blueprint_builder.py  test_blueprint_service.py  test_celery.py  test_db_factory.py  test_renderer.py  test_repository.py  test_schemas.py  test_security.py  test_storage.py  test_storage_factory.py  test_template_service.py  test_user_service.py  test_video_service.py
zorkvdo/services/backend/zorkvdo_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
