[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zorkvdo-backend"
version = "0.1.0"
description = "ZorkVDO backend - AI-powered viral video blueprint generator"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "ZorkVDO Team" }]
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.9",
    # Auth
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.1.2",
    # Validation / settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    # Async / workers
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "flower>=2.0.1",
    # HTTP / storage
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "minio>=7.2.5",
    # Firebase (admin SDK - used when configured)
    "firebase-admin>=6.5.0",
    # Video / CV / AI
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "Pillow>=10.2.0",
    # Heavy CV is optional - lazy-imported to keep install light
    # ("ultralytics>=8.1.0", "mediapipe>=0.10.9") -> see requirements-ai.txt
    "easyocr>=1.7.0",
    # Logging / observability
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    # Database (Firestore is SDK-based; sqlite fallback for local dev)
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "python-slugify>=8.0.1",
    "orjson>=3.9.15",
    "websockets>=12.0",
]

[project.optional-dependencies]
ai = [
    "ultralytics>=8.1.0",
    "mediapipe>=0.10.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "respx>=0.20.2",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-passlib",
    "types-redis",
    "freezegun>=1.4.0",
]

[project.scripts]
zorkvdo-api = "app.main:run"
zorkvdo-worker = "app.workers.celery_app:run_worker"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov=packages",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "integration: integration tests that hit a live-ish stack",
    "slow: tests that take >2s (e.g. real video analysis)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "PIE", "RET", "SIM", "PL"]
ignore = ["S101", "S104", "PLR0913", "PLR2004", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR"]
"**/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
