[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zorkvdo-backend"
version = "0.1.0"
description = "ZorkVDO backend - AI-powered viral video blueprint generator"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "ZorkVDO Team" }]
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.9",
    # Auth — Firebase Authentication (no bcrypt, no JWT)
    "firebase-admin>=6.5.0",
    # AI — Gemini via the unified google-genai SDK
    "google-genai>=0.3.0",
    # Validation / settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    # Async / workers
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "flower>=2.0.1",
    # Storage (S3/MinIO optional)
    "boto3>=1.34.0",
    # Video / CV / audio
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "ffmpeg-python>=0.2.0",
    "moviepy>=2.0.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "Pillow>=10.2.0",
    # Logging
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "python-slugify>=8.0.1",
    "orjson>=3.9.15",
]

[project.optional-dependencies]
ai = [
    "ultralytics>=8.1.0",
    "mediapipe>=0.10.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "respx>=0.20.2",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-passlib",
    "types-redis",
    "freezegun>=1.4.0",
]

[project.scripts]
zorkvdo-api = "app.main:run"
zorkvdo-worker = "app.workers.celery_app:run_worker"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov=packages",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "integration: integration tests that hit a live-ish stack",
    "slow: tests that take >2s (e.g. real video analysis)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "PIE", "RET", "SIM", "PL"]
ignore = ["S101", "S104", "PLR0913", "PLR2004", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR"]
"**/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
